<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTCC Library</string>
    <string name="settings">Settings</string>
    <string name="user_borrowing">Borrowed</string>
    <string name="user_borrowed">Returned</string>
    <string name="user_wanted">Wanted</string>
    <string name="user_donated">Donated</string>
    <string name="book_reading">reading</string>
    <string name="book_read">read</string>
    <string name="book_wish">wish</string>
    <string name="book_reading_full">I\'m reading this book.</string>
    <string name="book_read_full">I\'ve read this book.</string>
    <string name="book_wish_full">I want to read this book.</string>
    
    <string name="user_center">User Center</string>
    <string name="book_library">Library</string>
    <string name="isbn_scanner">Scan ISBN</string>
    <string name="library_technical">Technical</string>
    <string name="library_self">Self Improvement</string>
    <string name="library_languages">Foreign Languages</string>
    <string name="library_misc">Misc</string>
   	<string name="library_engineering">Engineering</string>
   	<string name="library_management">Management</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_review">Comment</string>
    <string name="book_info">Book</string>
    <string name="book_detail">Book Details</string>
    <string name="book_summary">Book Summary</string>
    <string name="author_intro">Author Intro</string>
    <string name="book_reviews">Book Reviews</string>
    <string name="load_failed">Load failed!</string>
    <string name="no_network_connection_toast">No network connection</string>
    <string name="plus_one">+1</string>
    <string name="book_from">From: </string>
    <string name="add_review">Add review : </string>
    <string name="add_review_hint">Add review...</string>
    <string name="add_comment">Add comment : </string>
    <string name="add_comment_hint">Add comment...</string>
    <string name="comment_not_empty">Comment cannot be empty.</string>
    <string name="quote"> : </string>
    <string name="send_review">Send</string>
    <string name="cancel_comment">Cancel Comment?</string>
    <string name="lost_comment">Your comment will be lost.</string>
    <string name="book_new_arrival">New Arrival</string>
    <string name="book_hotest">The Hotest</string>
    <string name="book_category">Browse by category</string>
    <string name="book_author">Author:</string>
    <string name="book_publisher">Publisher:</string>
    <string name="book_publish_date">Publish Date:</string>
    <string name="book_price">Price:</string>
    <string name="book_tag">Tag:</string>
    <string name="book_due_date">Due on %1$s</string>
    <string name="book_remaining_date">Due on %1$s days</string>
    <string name="book_expired_date">Expired %1$s days</string>
    <string name="book_isbn">ISBN:</string>
    
    <string name="login_signup">Sign up</string>
    <string name="login_signin">Sign in</string>
    <string name="login_hint_user_name">User name</string>
    <string name="login_hint_user_email">Email</string>
    <string name="login_hint_user_password">Password</string>
    <string name="login_oauth_text">Login with third party account</string>
    <string name="login_douban_text">Douban</string>
    <string name="login_with_douban">Login with Douban Account</string>
    <string name="login_sina_text">Sina</string>
    <string name="login_with_sina">Login with Sina Weibo Account</string>
    <string name="login_pick_image">Pick Image</string>
    <string name="login_succeed">Login succeesfully</string>
    <string name="login_failed">Login failed</string>
    <string name="login_failed_user_invalid">Invalid user</string>
    <string name="login_failed_password_invalid">Invalid password</string>
    <string name="login_in_progress">Login in progress...</string>
    <string name="login_set_username">Set username</string>
    <string name="register_in_progress">Register in progress...</string>
    <string name="register_succeed">Register succeesfully</string>
    <string name="register_failed">Register failed</string>
    <string name="register_failed_user_exists">User already exists</string>
    <string name="or">or</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
	<string name="user_name_not_empty">User name cannot be empty</string>
	<string name="user_email_not_empty">Email cannot be empty</string>
	<string name="user_email_invalid">Invalid email address</string>
	<string name="user_password_not_empty">Password cannot be empty</string>
	<string name="camera_not_found">Camera not found</string>
	
	<string name="pref_user_account_title">Account Settings</string>
	<string name="pref_title_edit_account">Edit Account</string>
	<string name="pref_title_log_out">Log out</string>
	<string name="pref_logout_confirm">Are you sure to log out?</string>
	<string name="pref_others">Others</string>
	<string name="pref_title_check_update">Check for update</string>
	<string name="pref_title_feedback">Feedback</string>
	<string name="pref_title_about">About</string>
	<string name="pref_title_version">Version</string>
	
	<string name="title_search">Search result: </string>
	<string name="title_search_query">Search for \"&lt;b>%1$s&lt;b>\"</string>
	<string name="search_hint">Search by book title</string>
	<string name="feedback_hint">Add your feedback...</string>
    <string name="action_scan">Scan</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="last_updated">Last Updated</string>
    <string name="update_failed">Update Failed!</string>
    <string name="foot_loading">Loading...</string>
    <string name="foot_no_more_data">No more data</string>
    <string name="title_scan_result">Scan result: </string>

    <string name="borrow_this_book">Borrow this book</string>
    <string name="return_this_book">Return to library</string>
    <string name="lent_to_others">Lent to %1$s</string>
    <string name="operation_succeed">Operation succeed!</string>
    <string name="no_book_borrowing">No book borrowing.</string>
    <string name="no_book_borrowed">No book borrowed.</string>
    <string name="borrowed_book_excceed_3">You can only borrow 3 books at once.</string>
    <string name="no_book_found">The book is not found in the library.</string>
    <string name="no_book_searched">No book found.</string>
    <string name="no_more_books">No more books.</string>
    
    <string name="expire_book_tile">You have some books is going to expire.</string>
    <string name="expire_book_description">Please click here to check.</string>
    
    <string name="latest_version">This version is the latest version.</string>
    <string name="checking_updates">Checking for updates....</string>
    <string name="new_version_found">New version found. Do you want to upgrade?</string>
    <string name="upgrade">Yes</string>
    <string name="not_upgrade">No</string>
</resources>