<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_user_account_settings"
        android:title="@string/pref_user_account_title" >

        <Preference
            android:key="pref_key_edit_account"
            android:summary="High"
            android:title="@string/pref_title_edit_account" />

        <com.gtcc.library.ui.AlertDialogPreference
            android:dialogMessage="@string/pref_logout_confirm"
            android:dialogTitle="@string/pref_logout_confirm"
            android:key="pref_key_log_out"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/ok"
            android:title="@string/pref_title_log_out" >
        </com.gtcc.library.ui.AlertDialogPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_others"
        android:title="@string/pref_title_version" >

        <Preference
            android:key="pref_key_check_update"
            android:title="@string/pref_title_check_update" />

        <Preference
            android:enabled="false"
            android:key="pref_key_version"
            android:title="@string/app_name" />
    </PreferenceCategory>

</PreferenceScreen>