<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_scan"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>

</menu>