<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content_padding_normal" >

        <EditText
            android:id="@+id/login_name"
            style="@style/editbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_user_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/login_password"
            style="@style/editbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:hint="@string/login_hint_user_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/content_padding_normal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/login_signup"
                style="@style/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                android:text="@string/login_signup" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/element_spacing_normal"
                android:layout_marginRight="@dimen/element_spacing_normal"
                android:background="@color/transparent" />

            <Button
                android:id="@+id/login_signin"
                style="@style/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_red"
                android:text="@string/login_signin" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/or_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginTop="@dimen/element_spacing_normal" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_centerVertical="true"
                android:background="@color/dialog_separator" />

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:paddingLeft="@dimen/element_spacing_normal"
                android:paddingRight="@dimen/element_spacing_normal"
                android:text="@string/or"
                android:textColor="@color/dialog_separator"
                android:textSize="15.0dip" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/login_douban"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_bg"
                android:drawableLeft="@drawable/douban_connect"
                android:drawablePadding="@dimen/element_spacing_normal"
                android:drawableRight="@drawable/ic_navi_next"
                android:gravity="left|center_vertical"
                android:paddingLeft="@dimen/element_spacing_normal"
                android:text="@string/login_with_douban" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>