<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/content_padding_normal" >

        <RelativeLayout
            android:id="@+id/user_password_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_item_bg0" >

            <TextView
                android:id="@+id/user_label"
                style="@style/RegisterText"
                android:layout_marginLeft="@dimen/content_padding_normal"
                android:text="@string/login_hint_user_name" />

            <EditText
                android:id="@+id/login_user"
                style="@style/RegisterEdit"
                android:layout_alignTop="@id/user_label"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@id/user_label"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/line_separator"
                style="@style/line_separator"
                android:layout_below="@id/user_label" />

            <TextView
                android:id="@+id/password_label"
                style="@style/RegisterText"
                android:layout_alignLeft="@id/user_label"
                android:layout_below="@id/line_separator"
                android:text="@string/login_hint_user_password" />

            <EditText
                android:id="@+id/login_password"
                style="@style/RegisterEdit"
                android:layout_alignLeft="@id/login_user"
                android:layout_below="@id/line_separator"
                android:inputType="textPassword" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_signin"
            style="@style/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/content_padding_normal"
            android:background="@drawable/btn_cyan"
            android:text="@string/login_signin" />

        <RelativeLayout
            android:id="@+id/separator_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:layout_marginTop="@dimen/element_spacing_normal" >

            <View style="@style/line_separator_accent" />

            <TextView
                android:id="@+id/login_oauth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:paddingLeft="@dimen/element_spacing_normal"
                android:paddingRight="@dimen/element_spacing_normal"
                android:text="@string/login_oauth_text"
                android:textColor="@color/dialog_separator"
                android:textSize="@dimen/text_size_large" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/login_douban"
                style="@style/login_oauth_block"
                android:background="@drawable/login_douban_bg" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/douban_connect" />

                <TextView
                    android:id="@+id/login_douban_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="@dimen/element_spacing_normal"
                    android:text="@string/login_douban_text"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <View style="@style/vertical_line_separator" />

            <LinearLayout
                android:id="@+id/login_sina"
                style="@style/login_oauth_block"
                android:background="@drawable/login_sina_bg" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sina_connect" />

                <TextView
                    android:id="@+id/login_sina_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingLeft="@dimen/element_spacing_normal"
                    android:text="@string/login_sina_text"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>