<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:library="http://schemas.android.com/apk/res/com.gtcc.library"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/content_padding_normal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <com.gtcc.library.ui.BezelImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/register_user_image_size"
                android:layout_height="@dimen/register_user_image_size"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/person_image_empty"
                library:borderDrawable="@drawable/circle_border"
                library:maskDrawable="@drawable/circle_mask" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/content_padding_normal"
            android:background="@drawable/login_item_bg0" >

            <TextView
                android:id="@+id/user_label"
                style="@style/RegisterText"
                android:layout_marginLeft="@dimen/content_padding_normal"
                android:text="@string/login_hint_user_name" />

            <EditText
                android:id="@+id/register_user"
                style="@style/RegisterEdit"
                android:layout_alignTop="@id/user_label"
                android:layout_marginLeft="32dp"
                android:layout_toRightOf="@id/user_label"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/separator1"
                style="@style/line_separator"
                android:layout_below="@id/user_label" />

            <TextView
                android:id="@+id/email_label"
                style="@style/RegisterText"
                android:layout_alignLeft="@id/user_label"
                android:layout_below="@id/separator1"
                android:text="@string/login_hint_user_email" />

            <EditText
                android:id="@+id/register_email"
                style="@style/RegisterEdit"
                android:layout_alignLeft="@id/register_user"
                android:layout_below="@id/separator1"
                android:inputType="textEmailAddress" />

            <View
                android:id="@+id/separator2"
                style="@style/line_separator"
                android:layout_below="@id/email_label" />

            <TextView
                android:id="@+id/password_label"
                style="@style/RegisterText"
                android:layout_alignLeft="@id/user_label"
                android:layout_below="@id/separator2"
                android:text="@string/login_hint_user_password" />

            <EditText
                android:id="@+id/register_password"
                style="@style/RegisterEdit"
                android:layout_alignLeft="@id/register_user"
                android:layout_below="@id/separator2"
                android:inputType="textPassword" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_signup"
            style="@style/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_padding_normal"
            android:background="@drawable/btn_cyan"
            android:text="@string/login_signup" />
    </LinearLayout>

</ScrollView>