<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/head_rootLayout"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
        >
    <!-- content -->
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/refreshable_head_contentLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp" >
        <!-- progress bar -->
        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" >
            <!-- arrow icon -->
            <ImageView
                    android:id="@+id/head_arrowImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pulltorefresh_arrow"
                    android:contentDescription="@string/app_name"/>
            <!-- progress bar -->
            <ProgressBar
                    android:id="@+id/head_progressBar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />
        </FrameLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical" >
            <!-- Pull to refresh -->
            <TextView
                    android:id="@+id/head_tipsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pull_to_refresh"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            <!-- Last Update -->
            <TextView
                    android:id="@+id/head_lastUpdatedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated"
                    android:textColor="#cc6600"
                    android:textSize="10sp" />
        </LinearLayout>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="?android:attr/listDivider"
        />
    </RelativeLayout>
</LinearLayout>